shreyasmanifests/redis/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app 
  labels:
    app: redis 
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
